--- a/Assets/_Project/_Editor/_Editor.asmdef
+++ b/Assets/_Project/_Editor/_Editor.asmdef
@@ -1,12 +1,15 @@
 {
-    "name": "_Scripts",
+    "name": "_Editor",
     "rootNamespace": "Game",
     "references": [
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:6546d7765b4165b40850b3667f981c26",
-        "GUID:df380645f10b7bc4b97d4f5eb6303d95"
+        "GUID:df380645f10b7bc4b97d4f5eb6303d95",
+        "GUID:51ed2a9478d693e4fae1225f4c859514"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": true,
